feat(frontend): redesign UI with Fiori Horizon aesthetic + fix API pagination
 ## Frontend – UI Redesign (SAP Fiori Horizon)

 - index.css: rewrite CSS variables with Fiori Horizon light/dark palette
   keeping Nic-Labs purple (#5A179B) as primary brand color; add utility
   classes: fiori-page-header, fiori-toolbar, fiori-section, fiori-status-*
 - AppLayout: Fiori shell bar (44px, purple brand stripe), compact 224px
   sidebar with grouped nav sections, notification polling every 60s,
   light/dark/system theme toggle
 - All pages (Dashboard, Helpdesk, Inventario, RecursosHumanos, Usuarios,
   Configuracoes): apply Fiori page header pattern — full-width title/
   subtitle anchored at top with border-b, content area with padding below
 - Login: replace split-panel with centered atmospheric card — obsidian
   #14121f background, purple radial glow, dot-grid overlay, icon-prefixed
   inputs, arrow CTA button, divider + disabled Keycloak SSO placeholder,
   shield footer note

 ## Frontend – API Compatibility Fixes

 - Usuarios: fix setUsersList(data) → setUsersList(data.content || [])
   for paginated /users response; remove duplicate Dialog component
 - Helpdesk: fix setUsers(data) → setUsers(data.content || [])
 - Inventario: fix pagination for /users, /inventory/administrative/items
   and /inventory/administrative/movements
 - Dashboard: fix setStockItems(data) → setStockItems(data.content || [])
 - RecursosHumanos: fix pagination for /hr/employees and /hr/absences